# rtos

./: .cproject  .project  CMakeLists.txt  CMakePresets.json  STM32G0B1RETX_FLASH.ld  STM32G0B1RETX_RAM.ld  gcc-arm-none-eabi.cmake  shell.py  startup_stm32g0b1retx.s
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Drivers/CMSIS/: CMakeLists.txt
Inc/: debugPins.h  led.h  osKernel.h  timebase.h  uart.h
Src/: debugPins.c  led.c  main.c  osKernel.c  timebase.c  uart.c
